# ArxivDigest

./: .env.template  .gitignore  LICENSE  README.md  advanced_usage.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: .daily_pipeline.yaml.swp  daily_pipeline.yaml
src/: action.py  app.py  download_new_papers.py  relevancy.py  relevancy_prompt.txt  requirements.txt  utils.py
