[tool.poetry]
name = "arxivdigest"
version = "0.1.0"
description = ""
authors = ["tbd"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
beautifulsoup4 = "^4.12.2"
numpy = "^1.25.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
sendgrid = "^6.10.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
